# csse332-labs-vestjejj

./: .gitignore
Homework01/src/: mem.c
Homework01/tests/: mem_tests.c
Homework02/: CMakeLists.txt
Homework02/include/: proc_read.h
Homework02/src/: CMakeLists.txt  proc_read.c
Homework02/tests/: CMakeLists.txt  proc_read_debug.c  proc_read_tests.c
Lab01/include/: db.h
Lab01/src/: 2  db.c  fib.c  hello.c
Lab02/: CMakeLists.txt  dataout.txt  run_benchmark.sh  timedata.txt
Lab02/include/: freading.h  reading.h
Lab02/src/: CMakeLists.txt  freading.c  reading.c
Lab02/tests/: CMakeLists.txt  freading_debug.c  reading_debug.c
